--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,19 +4,13 @@
         "node": true
     },
     "extends": [
-      "eslint: recommended",
-      "plugin:prettier/recommended",
-      "google"
+        "airbnb-base"
     ],
-    "globals": {
-      "Atomics": "readonly",
-      "SharedArrayBuffer": "readonly"
-    },
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
     },
-    "plugins": ["prettier"],
     "rules": {
+      "import/extensions": "off"
     }
 }
