--- a/package.json
+++ b/package.json
@@ -14,10 +14,8 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "eslint": ">=5.16.0",
-    "eslint-config-google": "^0.14.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.1.0",
+    "eslint": "^7.32.0 || ^8.2.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "prettier": "^2.7.1"
   }
 }
